 24-Oct-2020  V1.643 Incorporate obsolete/supersede item in rcsb_repository_holdings_combined_entry
 28-Oct-2020  V1.644 Make reference alignment options accessible from the configuration file
 31-Oct-2020  V1.645 Add taxonomy identifier salvage method
  1-Nov-2030  V1.646 Extend taxonomy identifier salvage method
  6-Dec-2020  V1.647 Update database server configuration
  9-Dec-2020  V1.648 Add validation slider image repository content type
 16-Dec-2020  V1.649 Add hydrogen atom counts -
 28-Dec-2020  V1.650 Corrections to indexing in multiprocessing RepoScanUtils(), fix CLI test cases
  6-Jan-2021  V1.651 Enumeration updates for selected polymer types.
  8-Jan-2021  V1.652 Add mongodb distinct() method.
  8-Jan-2021  V1.653 Enumeration updates for selected polymer types.
 12-Jan-2021  V1.654 Add primary citation author ORCIDs
 15-Jan-2021  V1.655 Back out Protein/NA/Oligosaccharide selected polymer type for now
 16-Jan-2021  V1.656 Further enumeration updates for polymer types.
 28-Jan-2021  V1.657 RSRCC -> RSCC
 29-Jan-2021  V1.658 Expose OpenEye SMILES descriptors as RCSB descriptors
 30-Jan-2021  V1.659 Update rcsb.utils.taxonomy dependency to add fallback capability
 12-Feb-2021  V1.660 Add ligand validation score and generation category rcsb_nonpolymer_instance_validation_score
 15-Feb-2021  V1.661 Split out dictionary methods repository tools into rcsb.utils.dictionary and rcsb.utils.repository
 21-Feb-2021  V1.662 Integrating latest rcsb.utils.dictionary and rcsb.utils.repository.
 22-Feb-2021  V1.663 Further integration adjustments for rcsb.utils.dictionary.
 25-Feb-2021  V1.664 Update dependencies and pipeline config
  7-Mar-2021  V1.666 Handle inconsistent superseding data in repository holdings.
 12-Mar-2021  V1.667 Add separate processing of pdb-format update list inventory.
 18-Mar-2021  V1.668 Add support for embedded iterables within subcategory aggregates, add additional_properties
                     feature categories.