@@ -7,7 +7,7 @@ jsondiff >= 1.2.0
 strict-rfc3339
 mysqlclient >= 1.3.12
 pymongo >= 3.7.0
-mmcif >= 0.61
+mmcif >= 0.63
 rcsb.utils.config >= 0.35
 rcsb.utils.io >= 1.00
 rcsb.utils.multiproc >= 0.17
